prod/ingress/rabbitmq_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: thuega-as4-production
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/instance: thuega-as4-prod
    app.kubernetes.io/name: rabbitmq-cluster
spec:
  tls:
  - hosts:  
    - rabbitmq-p-thuega-az.level-365.com
  ingressClassName: nginx
  rules:
    - host: rabbitmq-p-thuega-az.level-365.com
      http:
        paths:
        - backend:
            service:
              name: rabbitmq-cluster
              port:
                name: management
          path: /
          pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 10.28.128.4
